--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -11,8 +11,8 @@ spec:
   project: default
   source:
     path: apps/
-    # repoURL: https://github.com/arthurk/argocd-example-install.git
-    # targetRevision: HEAD
+    repoURL: https://github.com/constructions-incongrues/club.jeancloude.k8s.git
+    targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
