--- a/apps/templates/rocketchat.yaml
+++ b/apps/templates/rocketchat.yaml
@@ -19,6 +19,7 @@ spec:
             rootPassword: root
             username: mongo
             password: mongo
+            database: rocketchat
     repoURL: https://rocketchat.github.io/helm-charts
     targetRevision: 3.1.0
   syncPolicy:
