--- a/apps/templates/argo-cd-projects.yaml
+++ b/apps/templates/argo-cd-projects.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: jeancloude.club
-  namespace: argo-cd
+  namespace: default
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -13,13 +13,6 @@ spec:
   # Allow manifests to deploy from any Git repos
   sourceRepos:
   - '*'
-
-  # Only permit applications to deploy to the guestbook namespace in the same cluster
-  destinations:
-  - namespace: jeancloude-club-nextcloud
-    server: https://kubernetes.default.svc
-  - namespace: jeancloude-club-rocketchat
-    server: https://kubernetes.default.svc
 
   # Enables namespace orphaned resource monitoring.
   orphanedResources:
