--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: nextcloud
-  namespace: argo-cd
+  namespace: default
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
