--- a/apps/templates/root.yaml
+++ b/apps/templates/root.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: argo-cd
+    namespace: default
   project: jeancloude.club
   source:
     path: apps/
