--- a/apps/templates/argo-cd-projects.yaml
+++ b/apps/templates/argo-cd-projects.yaml
@@ -14,6 +14,11 @@ spec:
   sourceRepos:
   - '*'
 
+  # Only permit applications to deploy to the guestbook namespace in the same cluster
+  destinations:
+  - namespace: *
+    server: https://kubernetes.default.svc
+
   # Enables namespace orphaned resource monitoring.
   orphanedResources:
     warn: true
