--- a/apps/templates/argo-cd-projects.yaml
+++ b/apps/templates/argo-cd-projects.yaml
@@ -16,7 +16,7 @@ spec:
 
   # Only permit applications to deploy to the guestbook namespace in the same cluster
   destinations:
-  - namespace: *
+  - namespace: '*'
     server: https://kubernetes.default.svc
 
   # Enables namespace orphaned resource monitoring.
