--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -16,3 +16,7 @@ argo-cd:
         - type: helm
           name: argo-cd
           url: https://argoproj.github.io/argo-helm
+    ingress:
+      enabled: true
+      hosts:
+        - argocd.jeancloude.club
