--- a/apps/templates/traefik.yaml
+++ b/apps/templates/traefik.yaml
@@ -16,6 +16,7 @@ spec:
       values: |
         dashboard:
           enabled: true
+          ingressRoute: true
         rbac:
           enabled: true
         additionalArguments:
