--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -18,6 +18,11 @@ spec:
           enabled: true
           rules:
             -
+              host: 'cm.jeancloude.club'
+              paths:
+                - path: /
+                  pathType: Prefix
+            -
               host: 'cartemembre.jeancloude.club'
               paths:
                 - path: /
