--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -17,7 +17,7 @@ spec:
         image:
           tag: 15.0.2
         clusterDomain: kubernetes.default.svc
-        extraEnv:
+        extraEnv: |
           - name: KEYCLOAK_PROXY_ADDRESS_FORWARDING
             value: true
         ingress:
