--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -33,6 +33,15 @@ spec:
               paths:
                 - path: /
                   pathType: Prefix
+            console:
+              enabled: true
+              rules:
+                -
+                  host: 'cm.jeancloude.club'
+                  paths:
+                    - path: /auth/admin/
+                      pathType: Prefix
+
     repoURL: https://codecentric.github.io/helm-charts
     targetRevision: 15.1.0
   syncPolicy:
