--- a/apps/templates/traefik.yaml
+++ b/apps/templates/traefik.yaml
@@ -18,6 +18,9 @@ spec:
           kubernetesIngress:
             publishedService:
               enabled: true
+        additionalArguments:
+          - "--entryPoints.web.proxyProtocol.insecure"
+          - "--entryPoints.web.forwardedHeaders.insecure"
     repoURL: https://helm.traefik.io/traefik
     targetRevision: 10.6.2
   syncPolicy:
