--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -39,6 +39,8 @@ spec:
                   'app.jeancloude.club'
                 ]
               ];
+          defaultConfigs:
+            swift.config.php: true
         ingress:
           enabled: true
         extraEnv:
