--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -39,36 +39,36 @@ spec:
                 'objectstore' => [
                   'class' => 'OC\\Files\\ObjectStore\\Swift',
                   'arguments' => [
-                    'autocreate' => 'true',
+                    'autocreate' => true,
                     'user' => [
                       'name' => 'user-KPNf2CXgFmYY',
                       'password' => 'ChaDQNt8R6CpWeaHfDNeWmzd6edhDmwW',
                       'domain' => [
                         'name' => 'Default',
-                      ],
-                      'tenantName' => '8966606530353673',
-                      'serviceName' => 'swift',
-                      'region' => 'GRA',
-                      'url' => 'https://auth.cloud.ovh.net/v3/',
-                      'bucket' => 'club-jeancloude-nextcloud-1',
+                      ]
+                    ],
+                    'tenantName' => '8966606530353673',
+                    'serviceName' => 'swift',
+                    'region' => 'GRA',
+                    'url' => 'https://auth.cloud.ovh.net/v3/',
+                    'bucket' => 'club-jeancloude-nextcloud-1',
                   ],
                   'scope' => [
                     'project' => [
                       'name' => 'de9eaa1e9cc94734bf787165a68f4d01',
                       'domain' => [
                         'name' => 'Default',
-                      ],
                     ],
                   ],
                 ],
               ],
             ];
-
+            
             preview.config.php: |-
               <?php
               $CONFIG = [
                 'filelocking.enabled' => 'true',
-                'enable_previews' => true,
+                'enable_previews' => '(true,
               ];
 
             proxy.config.php: |-
