--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -30,7 +30,8 @@ spec:
             logging.config.php: |-
               <?php
               $CONFIG = [
-                'log_level' => 0,
+                'log_level' => 2,
+                "log_type" => "errorlog",
               ];
 
             objectstore.config.php: |-
