--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -24,6 +24,8 @@ spec:
           enabled: true
         nginx:
           enabled: true
+        persistence:
+          enabled: true
         nextcloud:
           host: app.jeancloude.club
           configs:
