--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rocketchat
+  name: kubecost
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
