--- a/apps/templates/kubecost.yaml
+++ b/apps/templates/kubecost.yaml
@@ -16,6 +16,8 @@ spec:
       values: |
         kubecostToken: dHJpc3RhbkByaXZvYWxsYW4ubmV0xm343yadf98
         ingress:
+          annotations:
+            kubernetes.io/ingress.class: traefik
           enabled: true
           hosts:
             - kubecost.jeancloude.club
