--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -22,6 +22,9 @@ spec:
           enabled: false
         mariadb:
           enabled: true
+          architecture: replication
+          primary:
+            persistence: enabled
         nginx:
           enabled: true
         persistence:
@@ -86,7 +89,7 @@ spec:
         ingress:
           enabled: true
     repoURL: https://nextcloud.github.io/helm
-    targetRevision: 2.10.2
+    targetRevision: 2.11.3
   syncPolicy:
     automated:
       prune: true
