--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -32,6 +32,8 @@ spec:
           enabled: true
         persistence:
           enabled: false
+        redis:
+          enabled: true
         nextcloud:
           host: app.jeancloude.club
           configs:
