--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -35,6 +35,18 @@ spec:
         nextcloud:
           host: app.jeancloude.club
           configs:
+            caching.config.php: |-
+              <?php
+              $CONFIG = [
+                'memcache.local' => '\OC\Memcache\APCu',
+                'memcache.distributed' => '\OC\Memcache\Redis',
+                'memcache.locking' => '\OC\Memcache\Redis',
+                'redis' => [
+                  'host' => getenv('REDIS_HOST'),
+                  'port' => getenv('REDIS_HOST_PORT') ?: 6379,
+                  'password' => getenv('REDIS_HOST_PASSWORD')
+                ]
+              ]
             logging.config.php: |-
               <?php
               $CONFIG = [
