--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -26,14 +26,14 @@ spec:
           primary:
             persistence:
               enabled: true
-              hostAliases:
-                - nextcloud-mariadb
           secondary:
             persistence:
               enabled: true
         postgresql:
           enabled: true
           replication:
+            enabled: true
+          persistence:
             enabled: true
         nginx:
           enabled: true
