--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -30,6 +30,7 @@ spec:
           enabled: true
         persistence:
           enabled: true
+          accessMode: ReadWriteMany
         redis:
           enabled: true
         nextcloud:
