--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -15,22 +15,21 @@ spec:
     helm:
       values: |
         image:
-          tag: 23.0.0-fpm
+          tag: 23.0.0-apache
         cronjob:
           enabled: true
         internalDatabase:
           enabled: false
         mariadb:
           enabled: true
-          architecture: standalone
+          architecture: replication
           primary:
             persistence:
               enabled: true
         nginx:
-          enabled: true
+          enabled: false
         persistence:
           enabled: true
-          accessMode: ReadWriteMany
         redis:
           enabled: true
         nextcloud:
