--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -25,7 +25,7 @@ spec:
           value: nextcloud-mariadb-primary
         mariadb:
           enabled: true
-          architecture: replication
+          architecture: standalone
           primary:
             persistence:
               enabled: true
