--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -20,12 +20,9 @@ spec:
           enabled: true
         internalDatabase:
           enabled: false
-        extraEnv:
-        - name: DB_HOST
-          value: nextcloud-mariadb-primary
         mariadb:
           enabled: true
-          architecture: replication
+          architecture: standalone
           primary:
             persistence:
               enabled: true
@@ -36,16 +33,9 @@ spec:
         redis:
           enabled: true
         nextcloud:
+          replicaCount: 2
           host: app.jeancloude.club
           configs:
-            autoconfig.php: |-
-              <?php
-              $autoconfig_enabled = true;
-              $AUTOCONFIG = [
-                'dbhost' => 'nextcloud-mariadb-primary',
-                'directory' => getenv('NEXTCLOUD_DATA_DIR') ?: "/var/www/html/data"
-              ];
-            
             caching.config.php: |-
               <?php
               $CONFIG = [
