--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -14,39 +14,14 @@ spec:
     chart: keycloak
     helm:
       values: |
-        image:
-          tag: 15.0.2
-        clusterDomain: kubernetes.default.svc
-        extraEnv: |
-          - name: PROXY_ADDRESS_FORWARDING
-            value: 'true'
         ingress:
           enabled: true
-          rules:
-            -
-              host: 'cm.jeancloude.club'
-              paths:
-                - path: /
-                  pathType: Prefix
-            -
-              host: 'cartemembre.jeancloude.club'
-              paths:
-                - path: /
-                  pathType: Prefix
-          console:
-            enabled: true
-            rules:
-              -
-                host: 'cm.jeancloude.club'
-                paths:
-                  - path: /auth/admin/
-                    pathType: Prefix
-
-    repoURL: https://codecentric.github.io/helm-charts
-    targetRevision: 15.1.0
+          hostname: cartemembre.jeancloude.club
+    repoURL: https://charts.bitnami.com/bitnami
+    targetRevision: 5.2.8
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    # automated:
+    #   prune: true
+    #   selfHeal: true
     syncOptions:
       - CreateNamespace=true
