--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -14,6 +14,8 @@ spec:
     chart: keycloak
     helm:
       values: |
+        postgresql:
+          postgresqlPassword: keycloak
         ingress:
           enabled: true
           hostname: cartemembre.jeancloude.club
