--- a/apps/templates/keycloak.yaml
+++ b/apps/templates/keycloak.yaml
@@ -14,6 +14,7 @@ spec:
     chart: keycloak
     helm:
       values: |
+        proxyAddressForwarding: true
         postgresql:
           postgresqlPassword: keycloak
         ingress:
