--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -91,6 +91,22 @@ spec:
                 'enable_previews' => true,
               ];
 
+            oidc_login.config.php: |-
+              <?php
+              $CONFIG = [
+                'lost_password_link' => 'disabled',
+                'oidc_login_provider_url' => 'https://cartemembre.jeancloude.club',
+                'oidc_login_client_id' => 'nextcloud',
+                'oidc_login_client_secret' => 'LUQ548TPo2EKON34dCqfcH0TAdQFkTjr',
+                'oidc_login_auto_redirect' => false,
+                'oidc_login_hide_password_form' => true,
+                'oidc_login_attributes' => [
+                  'id' => 'preferred_username',
+                  'name' => 'name',
+                  'mail' => 'email',
+                ],
+              ];
+
             proxy.config.php: |-
               <?php
               $CONFIG = [
