--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -95,11 +95,14 @@ spec:
               <?php
               $CONFIG = [
                 'lost_password_link' => 'disabled',
-                'oidc_login_provider_url' => 'https://cartemembre.jeancloude.club',
+                'oidc_login_provider_url' => 'https://cartemembre.jeancloude.club/auth/realms/jeancloude.club',
+                'oidc_login_logout_url' => 'https://cartemembre.jeancloude.club/auth/realms/jeancloude.club/protocol/openid-connect/logout?redirect_uri=https%3A%2F%2Fapp.jeancloude.club%2F',
                 'oidc_login_client_id' => 'nextcloud',
                 'oidc_login_client_secret' => 'LUQ548TPo2EKON34dCqfcH0TAdQFkTjr',
                 'oidc_login_auto_redirect' => false,
                 'oidc_login_hide_password_form' => true,
+                'oidc_login_redir_fallback' => true,
+                'oidc_login_scope' => 'openid profile',
                 'oidc_login_attributes' => [
                   'id' => 'preferred_username',
                   'name' => 'name',
