--- a/apps/templates/nextcloud.yaml
+++ b/apps/templates/nextcloud.yaml
@@ -116,6 +116,17 @@ spec:
                 ]
               ];
 
+            mail.config.php: |-
+              <?php
+              $CONFIG = [
+                'mail_domain' => 'jeancloude.club',
+                'mail_from_address' => 'app',
+                'mail_smtphost' => 'in-v3.mailjet.com',
+                'mail_smtpauth' => true,
+                'mail_smtpname' => '7612061780ca8cd5cf12b113cecc7dd0',
+                'mail_smtppassword' => '4592d91c836ed5e292ca887052c33c15',
+              ];
+
         ingress:
           enabled: true
     repoURL: https://nextcloud.github.io/helm
